# stg

./: .gitignore  CMakeLists.txt  README.md  linear_interpolation.h  main.cpp
